--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 .container{
     width: 100%;
     height: 100vh;
-    background: #2b323c;
-    color: #fff;
+    background: #e1ee53;
+    color: rgb(49, 23, 200);
     display: flex;
     align-items: center;
     justify-content: center;
